# stt-tts

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  stt-tts.service
src/stt_tts/: __init__.py  audio.py  config.py  cuda.py  main.py  models.py
src/stt_tts/engines/: __init__.py  base.py  kokoro.py  manager.py  piper.py  whisper.py
tests/: conftest.py  test_api_stt.py  test_api_tts.py  test_audio.py  test_config.py  test_cuda.py  test_models.py  test_streaming.py
