[project]
name = "stt-tts"
version = "0.1.0"
description = "Local speech-to-text and text-to-speech HTTP API with per-request model selection and streaming."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nick" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
# Speech-to-text backend.
stt = ["faster-whisper>=1.1.0"]
# Kokoro TTS (Apache-2.0). Also requires the espeak-ng system package.
kokoro = ["kokoro>=0.9.4", "soundfile>=0.12.1", "numpy>=1.26"]
# Piper TTS (GPL-3.0). Also requires the espeak-ng system package.
piper = ["piper-tts>=1.3.0"]
# Everything needed to actually run the server on a GPU box.
all = [
  "faster-whisper>=1.1.0",
  "kokoro>=0.9.4",
  "soundfile>=0.12.1",
  "numpy>=1.26",
  "piper-tts>=1.3.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
]

[project.scripts]
stt-tts = "stt_tts.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
